# tokenops

./: .coverctl.yaml  .gitignore  .golangci.yml  .goreleaser.yaml  .nox.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  nox-remediate.yml  pages.yml  release.yml  security.yml
.roady/: events.jsonl  plan.json  spec.lock.json  spec.yaml  state.json
cmd/tokenops/: main.go
cmd/tokenops-mcp/: main.go
cmd/tokenopsd/: main.go  main_test.go
deployments/clickhouse/: 001_events.sql  002_materialized_views.sql  003_kafka_pipeline.sql  README.md
docs/: architecture-ddd.md  backlog.md  coach-hook.md  coverage-debt.md  customer-discovery.md  launch-plan.md  launch-tracker.md  plan-cost-model.md  pricing-research.md  scorecard.md  telemetry-contracts.md
docs/adr/: 0001-usage-coaching-hooks.md  0002-pricing-research-snapshots.md
integrations/python/tokenops_langchain/: README.md  pyproject.toml
integrations/python/tokenops_langchain/tokenops_langchain/: __init__.py  callback.py  env.py
integrations/python/tokenops_openai_agents/: README.md  pyproject.toml
integrations/python/tokenops_openai_agents/tokenops_openai_agents/: __init__.py  client.py  env.py
memory/: context-budget.md  decisions.md  open-threads.md  roadmap.md  status.md
scripts/: require-pr-branch.sh  sec-gate.py  smoketest-claude-code.sh  smoketest-codex.sh  smoketest-gemini.sh
security/: README.md  SUPPRESSION-GOVERNANCE.md  vex.json
wiki/: architecture.md  vendor-notes.md
(+688 files in other folders)
